# PIConGPU_analisis

./: .gitignore  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
PIConGPU_analisis_clean_project/: .gitattributes  .gitignore  LICENSE  PUSH_INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
PIConGPU_analisis_clean_project/archive/old_notebooks/: nanoplasma_export_and_plots_V1.ipynb  nanoplasma_export_and_plots_V2.ipynb  nanoplasma_plots_V2.ipynb  nanoplasma_plots_h5.ipynb
PIConGPU_analisis_clean_project/archive/old_scripts/: nanoplasma_analysis_final.py
PIConGPU_analisis_clean_project/examples/: basic_usage.py
PIConGPU_analisis_clean_project/notebooks/: 00_basic_raw_openpmd_usage.ipynb  01_export_reduced_h5.ipynb  02_paper_figures_from_h5.ipynb
PIConGPU_analisis_clean_project/src/nanoplasma_analysis/: __init__.py  core.py
archive/old_notebooks/: H5_plots_007.ipynb
archive/old_scripts/: ana_extract.py  ana_extract_v3.py
notebooks/: 01_export_reduced_h5.ipynb  02_paper_figures_direct.ipynb  ana_004.ipynb
src/nanoplasma_analysis/: __init__.py  export.py  h5plots.py
src/nanoplasma_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_static.py
