[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoplasma-analysis"
version = "0.1.0"
description = "Analysis helpers for PIConGPU helium nanoplasma openPMD outputs."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cristian Medina" }]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "imageio",
    "adios2",
]

[tool.setuptools.packages.find]
where = ["src"]
